# msmtp

./: .cvsignore  .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog.old  INSTALL  Makefile.am  NEWS  README  README.dos  README.w32  README.win32  THANKS  configure.ac
.github/workflows/: windows.yml
build-aux/: Makefile.am  c++defs.h  warn-on-use.h
doc/: .cvsignore  Makefile.am  Mutt+msmtp.txt  msmtp.1  msmtp.texi  msmtpd.1  msmtprc-system.example  msmtprc-user.example
gnulib/: .cvsignore  Makefile.am  arpa_inet.in.h  close-hook.c  close-hook.h  errno.in.h  float+.h  fseeko.c  getaddrinfo.c  getdelim.c  getpass.c  getpass.h  gettext.h  hmac-md5.c  hmac.h  inet_ntop.c  md5.c  md5.h  memxor.c  memxor.h  nanosleep.c  nanosleep.h  netdb.in.h  netinet_in.in.h  printf-parse.c  printf-parse.h  select.c  select_.h  setsockopt.c  stdarg.in.h  stdint.in.h  stdio.in.h  string.in.h  sys_select.in.h  sys_socket.in.h  sys_time.in.h  sysexit_.h  time.in.h  unistd.in.h  vasnprintf.c  (+1 more)
gnulib/m4/: .cvsignore  gnulib-cache.m4  gnulib-comp.m4  nanosleep.m4  sys_select_h.m4
nix/: default.nix
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  de.po  eo.po  es.po  fr.po  ka.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  ta.po  uk.po  zh_CN.po
scripts/: Makefile.am  set_sendmail.sh
scripts/emacs/: README.org  msmtp-config-mode.el
scripts/find_alias/: find_alias_for_msmtp.sh
scripts/msmtp-gnome-tool/: README  msmtp-gnome-tool.py
scripts/msmtpq/: README  README.msmtpq  msmtp-queue  msmtpQ  msmtpq
scripts/msmtpqueue/: ChangeLog  README  msmtp-enqueue.sh  msmtp-listqueue.sh  msmtp-runqueue.sh
scripts/set_sendmail/: set_sendmail.conf  set_sendmail.sh
scripts/vim/: README  msmtp.vim
scripts/vim/ftdetect/: msmtp.vim
scripts/vim/ftplugin/: msmtp.vim
scripts/vim/syntax/: msmtp.vim
src/: .gitignore  Makefile.am  aliases.c  aliases.h  base64.c  base64.h  conf.c  conf.h  crypto.c  crypto.h  eval.c  eval.h  hmac-md5.c  hmac-md5.h  inet.h  list.c  list.h  md5-apps.c  md5-apps.h  md5.c  md5.h  msgid.c  msgid.h  msmtp.c  msmtpd.c  mtls-gnutls.c  mtls-libtls.c  mtls-openssl.c  mtls-sspi.c  mtls.c  mtls.h  net.c  net.h  netrc.c  netrc.h  os_env.c  os_env.h  password.c  password.h  readbuf.c  (+13 more)
tests/: Makefile.am  test-auth-plain.sh  test-basic.sh  test-header-handling.sh
