EXTRA_DIST = \
	msmtpq/README.msmtpq			\
	msmtpq/msmtpq				\
	msmtpq/msmtp-queue			\
	msmtpqueue/README			\
	msmtpqueue/ChangeLog			\
	msmtpqueue/msmtp-enqueue.sh		\
	msmtpqueue/msmtp-listqueue.sh		\
	msmtpqueue/msmtp-runqueue.sh		\
	set_sendmail/set_sendmail.conf		\
	set_sendmail/set_sendmail.sh		\
	vim/README				\
	vim/msmtp.vim				\
	find_alias/find_alias_for_msmtp.sh	\
	msmtp-gnome-tool/README			\
	msmtp-gnome-tool/msmtp-gnome-tool.py
