TESTS = \
	test-basic.sh \
	test-auth-plain.sh \
	test-header-handling.sh

CLEANFILES = \
	mail-auth-plain.txt \
	out-auth-plain-mail.txt out-auth-plain-rcpt.txt \
	mail-header-handling.txt mail-header-handling-correct-recipients.txt \
	out-header-handling-mail.txt out-header-handling-rcpt.txt

EXTRA_DIST = $(TESTS)
